feat: reset index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,37 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>FemProductPreviewCardComponent</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <base href="/" />
+    <link rel="preconnect" href="https://ik.imagekit.io/" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Frontend Mentor | Product preview card component</title>
+  </head>
+
+  <body>
+    <app-root role="main"></app-root>
+    <noscript>
+      <p
+        style="
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          padding: 1em;
+          background-color: white;
+          color: #ff5959;
+          border-bottom: 2px solid currentColor;
+        "
+      >
+        This website needs JavaScript technology to function properly. Please
+        ensure that your browser supports JavaScript and that it is enabled.
+        <br />
+        To learn more, check out
+        <a href="https://enable-javascript.com/"
+          >How to enable JavaScript in your browser</a
+        >
+      </p>
+    </noscript>
+  </body>
 </html>
